--- a/Dice if you dare for android.html
+++ b/Dice if you dare for android.html
@@ -2,193 +2,172 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Dice If You Dare</title>
 <style>
-  body {
-    font-family: Arial, sans-serif;
-    padding: 20px;
-    background-color: #f2f2f2;
-  }
-  #dice-buttons, #menu-buttons, #upgrades-buttons {
-    margin: 10px 0;
-  }
-  button {
-    margin: 5px;
-    padding: 10px 20px;
-    font-size: 16px;
-  }
-  #result, #points {
-    font-size: 20px;
-    margin: 10px 0;
-  }
+    body { font-family: Arial, sans-serif; margin: 40px; }
+    h1 { font-size: 24px; }
+    h2 { font-size: 20px; }
+    button { margin: 5px; padding: 10px 20px; font-size: 16px; }
+    .dice-row { display: flex; flex-wrap: wrap; margin-bottom: 20px; }
+    .dice-row button { flex: 1 1 100px; }
+    #menu, #upgrades { display: none; }
 </style>
 </head>
 <body>
 
-<div id="result">Welcome to Dice If You Dare!</div>
-<div id="points">Points: 0</div>
+<h1>Welcome to Dice If You Dare!</h1>
+<div id="pointsDisplay">Points: 0</div>
 
-<div id="dice-buttons"></div>
+<div id="diceMenu" class="dice-row"></div>
 
-<button id="menu-button">Menu</button>
-<div id="menu-buttons" style="display:none;"></div>
-<div id="upgrades-buttons" style="display:none;"></div>
+<button id="menuButton">Menu</button>
+
+<div id="menu">
+    <h2>Menu</h2>
+    <div id="menuPoints"></div>
+    <button data-menu="dice">Dice</button>
+    <button data-menu="upgrades">Upgrades</button>
+    <button data-menu="draw">Draw</button>
+    <button data-menu="rebirth">Rebirth</button>
+    <button data-menu="prestige">Prestige</button>
+    <button id="closeMenu">Close</button>
+</div>
+
+<div id="upgrades">
+    <h2>Upgrades</h2>
+    <div id="upgradePoints"></div>
+    <div id="upgradeButtons"></div>
+    <button id="backFromUpgrades">Back</button>
+</div>
+
+<div id="result"></div>
 
 <script>
 let points = 0;
+let diceNames = ["D6","D8","D10","D12","D20","D100"];
+let diceMax = [6,8,10,12,20,100];
+let diceUpgrades = [1,1,1,1,1,1];
+let diceUnlocked = [true,false,false,false,false,false];
+let unlockCosts = [0,2500,12500,50000,250000,500000];
+let rollCosts = [0,250,1250,5000,25000,50000];
+let baseMultipliers = [1,1,1,1,1,1];
 
-const diceUpgrades = [1,1,1,1,1,1];
-const diceUnlocked = [true,false,false,false,false,false];
+function calculateMultipliers() {
+    for (let i = 0; i < diceMax.length; i++) {
+        let avgRoll = Math.ceil((diceMax[i]+1)/2);
+        baseMultipliers[i] = Math.ceil(rollCosts[i]/avgRoll);
+        if (baseMultipliers[i]<1) baseMultipliers[i]=1;
+    }
+}
+calculateMultipliers();
 
-const unlockCosts = [0,2500,12500,50000,250000,500000];
-const rollCosts = [0,250,1250,5000,25000,50000];
-const upgradeScale = [1.15,1.25,1.35,1.45,1.55,1.65];
-const diceMax = [6,8,10,12,20,100];
-
-const baseMultipliers = [];
-for (let i=0;i<6;i++){
-  let avgRoll = Math.floor((diceMax[i]+1)/2);
-  let mult = Math.ceil(rollCosts[i]/avgRoll);
-  baseMultipliers.push(mult < 1 ? 1 : mult);
+function updatePoints() {
+    document.getElementById("pointsDisplay").innerText = "Points: " + points;
+    document.getElementById("menuPoints").innerText = "Points: " + points;
+    document.getElementById("upgradePoints").innerText = "Points: " + points;
 }
 
-const diceNames = ["D6","D8","D10","D12","D20","D100"];
+function createDiceButtons() {
+    let diceMenu = document.getElementById("diceMenu");
+    diceMenu.innerHTML = "";
+    diceNames.forEach((name,i)=>{
+        let btn = document.createElement("button");
+        if(!diceUnlocked[i]){
+            btn.innerText = `${name} (Unlock: ${unlockCosts[i]})`;
+        } else {
+            btn.innerText = `${name} (Roll: ${rollCosts[i]})`;
+        }
+        btn.onclick = () => {
+            if(!diceUnlocked[i]){
+                if(points>=unlockCosts[i]){
+                    points -= unlockCosts[i];
+                    diceUnlocked[i]=true;
+                    document.getElementById("result").innerText = `${name} unlocked!`;
+                    updatePoints();
+                    createDiceButtons();
+                } else {
+                    document.getElementById("result").innerText = `Not enough points to unlock ${name}`;
+                }
+                return;
+            }
+            if(points>=rollCosts[i]){
+                points-=rollCosts[i];
+                let roll = Math.floor(Math.random()*diceMax[i])+1;
+                let multiplier = baseMultipliers[i]*diceUpgrades[i];
+                let total = roll*multiplier;
+                points += total;
+                document.getElementById("result").innerText = `Rolled ${name}: ${roll} × ${multiplier} = ${total}`;
+                updatePoints();
+            } else {
+                document.getElementById("result").innerText = `Not enough points to roll ${name}`;
+            }
+        };
+        diceMenu.appendChild(btn);
+    });
+}
+createDiceButtons();
 
-const resultDiv = document.getElementById("result");
-const pointsDiv = document.getElementById("points");
-const diceButtonsDiv = document.getElementById("dice-buttons");
-const menuButton = document.getElementById("menu-button");
-const menuButtonsDiv = document.getElementById("menu-buttons");
-const upgradesButtonsDiv = document.getElementById("upgrades-buttons");
-
-// Create dice buttons
-diceNames.forEach((name,index)=>{
-  const btn = document.createElement("button");
-  updateDiceButton(btn,index);
-  diceButtonsDiv.appendChild(btn);
-  btn.onclick = ()=>{
-    if (!diceUnlocked[index]){
-      if (points >= unlockCosts[index]){
-        points -= unlockCosts[index];
-        diceUnlocked[index] = true;
-        resultDiv.innerText = name + " unlocked!";
-        pointsDiv.innerText = "Points: "+points;
-        updateDiceButton(btn,index);
-      } else {
-        resultDiv.innerText = "Not enough points to unlock "+name;
-      }
-      return;
-    }
-    if (points >= rollCosts[index]){
-      points -= rollCosts[index];
-      let roll = Math.floor(Math.random()*diceMax[index])+1;
-      let multiplier = baseMultipliers[index]*diceUpgrades[index];
-      let total = roll*multiplier;
-      points += total;
-      resultDiv.innerText = `Rolled ${name}: ${roll} × ${multiplier} = ${total}`;
-      pointsDiv.innerText = "Points: "+points;
-    } else {
-      resultDiv.innerText = "Not enough points to roll "+name;
-    }
-  };
-});
-
-// Menu button
-menuButton.onclick = ()=>{
-  diceButtonsDiv.style.display = diceButtonsDiv.style.display === "none" ? "block" : "none";
-  upgradesButtonsDiv.style.display = "none";
-  menuButtonsDiv.style.display = menuButtonsDiv.style.display === "none" ? "block" : "none";
-  menuButtonsDiv.innerHTML = "";
-  
-  const pointsDisplay = document.createElement("button");
-  pointsDisplay.innerText = "Points: "+points;
-  pointsDisplay.disabled = true;
-  menuButtonsDiv.appendChild(pointsDisplay);
-
-  const options = ["Dice","Upgrades","Draw","Rebirth","Prestige"];
-  options.forEach(option=>{
-    const btn = document.createElement("button");
-    btn.innerText = option;
-    btn.onclick = ()=>{
-      if (option === "Dice"){
-        diceButtonsDiv.style.display = "block";
-        upgradesButtonsDiv.style.display = "none";
-        menuButtonsDiv.style.display = "none";
-      } else if (option === "Upgrades"){
-        showUpgradesMenu();
-      } else {
-        resultDiv.innerText = option+" menu coming soon!";
-      }
-    };
-    menuButtonsDiv.appendChild(btn);
-  });
+// Menu logic
+document.getElementById("menuButton").onclick = ()=>{
+    document.getElementById("menu").style.display = "block";
+    document.getElementById("diceMenu").style.display = "none";
 };
 
-function updateDiceButton(btn,index){
-  if (!diceUnlocked[index]){
-    btn.innerText = `${diceNames[index]} (Unlock: ${unlockCosts[index]})`;
-  } else {
-    btn.innerText = `${diceNames[index]} (Roll: ${rollCosts[index]})`;
-  }
-}
+document.getElementById("closeMenu").onclick = ()=>{
+    document.getElementById("menu").style.display = "none";
+    document.getElementById("diceMenu").style.display = "flex";
+};
 
-function showUpgradesMenu(){
-  menuButtonsDiv.style.display = "none";
-  diceButtonsDiv.style.display = "none";
-  upgradesButtonsDiv.style.display = "block";
-  upgradesButtonsDiv.innerHTML = "";
-
-  const title = document.createElement("div");
-  title.innerText = "Upgrades";
-  title.style.fontSize = "24px";
-  upgradesButtonsDiv.appendChild(title);
-
-  const pointsInUpgrade = document.createElement("div");
-  pointsInUpgrade.innerText = "Points: "+points;
-  pointsInUpgrade.style.fontSize = "20px";
-  upgradesButtonsDiv.appendChild(pointsInUpgrade);
-
-  diceNames.forEach((name,index)=>{
-    const btn = document.createElement("button");
-    updateUpgradeButton(btn,index);
-    upgradesButtonsDiv.appendChild(btn);
+document.querySelectorAll("#menu button[data-menu]").forEach(btn=>{
     btn.onclick = ()=>{
-      if (!diceUnlocked[index]){
-        resultDiv.innerText = name+" not unlocked yet!";
-        return;
-      }
-      let baseCost = index === 0 ? 50 : unlockCosts[index];
-      let scale = upgradeScale[index];
-      let cost = Math.floor(baseCost * Math.pow(scale,diceUpgrades[index]-1));
-      if (points >= cost){
-        points -= cost;
-        diceUpgrades[index]++;
-        resultDiv.innerText = name+" upgraded! Level: "+diceUpgrades[index];
-        pointsDiv.innerText = "Points: "+points;
-        pointsInUpgrade.innerText = "Points: "+points;
-        updateUpgradeButton(btn,index);
-      } else {
-        resultDiv.innerText = "Not enough points! Upgrade cost: "+cost;
-      }
+        let action = btn.getAttribute("data-menu");
+        if(action==="dice"){
+            document.getElementById("menu").style.display="none";
+            document.getElementById("diceMenu").style.display="flex";
+        } else if(action==="upgrades"){
+            showUpgrades();
+        } else {
+            document.getElementById("result").innerText = `${action} menu coming soon!`;
+        }
     };
-  });
+});
 
-  const backBtn = document.createElement("button");
-  backBtn.innerText = "Back";
-  backBtn.onclick = ()=>{
-    upgradesButtonsDiv.style.display = "none";
-    diceButtonsDiv.style.display = "block";
-  };
-  upgradesButtonsDiv.appendChild(backBtn);
+// Upgrades menu
+function showUpgrades(){
+    document.getElementById("menu").style.display="none";
+    document.getElementById("diceMenu").style.display="none";
+    document.getElementById("upgrades").style.display="block";
+    let upgradeDiv = document.getElementById("upgradeButtons");
+    upgradeDiv.innerHTML="";
+    diceNames.forEach((name,i)=>{
+        let btn = document.createElement("button");
+        let cost = Math.floor((i===0?50:unlockCosts[i])*Math.pow(1.15+i*0.1,diceUpgrades[i]-1));
+        btn.innerText = `${name} Upgrade (Level: ${diceUpgrades[i]}, Cost: ${cost})`;
+        btn.onclick = ()=>{
+            if(!diceUnlocked[i]){
+                document.getElementById("result").innerText = `${name} not unlocked yet!`;
+                return;
+            }
+            if(points>=cost){
+                points-=cost;
+                diceUpgrades[i]++;
+                document.getElementById("result").innerText = `${name} upgraded! Level: ${diceUpgrades[i]}`;
+                updatePoints();
+                showUpgrades();
+            } else {
+                document.getElementById("result").innerText = `Not enough points! Upgrade cost: ${cost}`;
+            }
+        };
+        upgradeDiv.appendChild(btn);
+    });
 }
 
-function updateUpgradeButton(btn,index){
-  let baseCost = index===0?50:unlockCosts[index];
-  let scale = upgradeScale[index];
-  let cost = Math.floor(baseCost * Math.pow(scale,diceUpgrades[index]-1));
-  btn.innerText = `${diceNames[index]} Upgrade (Level: ${diceUpgrades[index]}, Cost: ${cost})`;
-}
+document.getElementById("backFromUpgrades").onclick = ()=>{
+    document.getElementById("upgrades").style.display="none";
+    document.getElementById("diceMenu").style.display="flex";
+};
+
 </script>
 </body>
 </html>
-
